// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance black 1`] = `
<div
  data-css-1tiz5r9=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance blue 1`] = `
<div
  data-css-48v2ba=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance bone 1`] = `
<div
  data-css-1v5r0q7=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeBlue 1`] = `
<div
  data-css-1nvlpe4=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeGreen 1`] = `
<div
  data-css-13hzk1y=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeOrange 1`] = `
<div
  data-css-1ptri0m=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codePurple 1`] = `
<div
  data-css-1n6ftrg=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeRed 1`] = `
<div
  data-css-6x200g=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeSand 1`] = `
<div
  data-css-bwh6gu=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeTurquoise 1`] = `
<div
  data-css-1bfgu4v=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance codeYellow 1`] = `
<div
  data-css-ewrbgk=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance gray01 1`] = `
<div
  data-css-qfdobr=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance gray02 1`] = `
<div
  data-css-1iwwm4u=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance gray03 1`] = `
<div
  data-css-1ct2z2u=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance gray04 1`] = `
<div
  data-css-p9j7jz=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance gray05 1`] = `
<div
  data-css-1q7hgfl=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance gray06 1`] = `
<div
  data-css-4oz4oq=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance green 1`] = `
<div
  data-css-1s05snf=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance greenLight 1`] = `
<div
  data-css-185g5oo=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance orange 1`] = `
<div
  data-css-5z1xiy=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance orangeLight 1`] = `
<div
  data-css-1vnhyc8=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance pink 1`] = `
<div
  data-css-15auvj7=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance red 1`] = `
<div
  data-css-rst0ce=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance white 1`] = `
<div
  data-css-10dvu6c=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots appearance yellow 1`] = `
<div
  data-css-3pplc0=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots custom icon aria-label 1`] = `
<div
  data-css-10dvu6c=""
>
  <svg
    aria-label="account icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M20 2c1.103 0 2 .898 2 2v16c0 1.103-.897 2-2 2H4c-1.103 0-2-.897-2-2V4c0-1.102.897-2 2-2h16zm-4 18h4.001L20 4h-4v3h-2V4h-4v8H8V4H4v16h4v-3h2v3h4v-8h2v8zM6 13h6v3H6v-3zm6-5h6v3h-6V8z"
    />
  </svg>
</div>
`;

exports[`Storyshots custom props aria-label 1`] = `
<div
  data-css-10dvu6c=""
>
  <svg
    aria-label="completed"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots names AccountIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="account icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M20 2c1.103 0 2 .898 2 2v16c0 1.103-.897 2-2 2H4c-1.103 0-2-.897-2-2V4c0-1.102.897-2 2-2h16zm-4 18h4.001L20 4h-4v3h-2V4h-4v8H8V4H4v16h4v-3h2v3h4v-8h2v8zM6 13h6v3H6v-3zm6-5h6v3h-6V8z"
    />
  </svg>
</div>
`;

exports[`Storyshots names BookmarkFillIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="bookmarked icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM19 8h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names BookmarkIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="bookmark icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names BriefcaseIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="briefcase icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M20 7h-3V5c0-1.102-.897-2-2-2H9c-1.103 0-2 .898-2 2v2H4c-1.654 0-3 1.346-3 3v4h1v5c0 1.654 1.346 3 3 3h14c1.654 0 3-1.346 3-3v-5h1v-4c0-1.654-1.346-3-3-3zM9 5h6v2H9V5zm11 14a1 1 0 01-1 1H5a1 1 0 01-1-1v-5h4c0 1.103.897 2 2 2h4c1.103 0 2-.897 2-2h4v5zm-10-5v-2h4l-.003 2H10zm11-2h-5c0-1.102-.897-2-2-2h-4c-1.103 0-2 .898-2 2H3v-2c0-.552.449-1 1-1h16c.551 0 1 .448 1 1v2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names BrowseIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="browse icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 8h16a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V10a2 2 0 012-2zm0 2v10h16V10H4zm6 2l5 3-5 3v-6zM6 5h12a2 2 0 012 2H4a2 2 0 012-2zm2-3h8a2 2 0 012 2H6a2 2 0 012-2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CalendarIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="calendar icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M8 7H4v3h16V7h-4v1.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V7h-4v1.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V7zm2-2h4V3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V5h5a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V6a1 1 0 011-1h5V3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V5zm10 7H4v7h16v-7zM5 13h2v2H5v-2zm0 3h2v2H5v-2zm3-3h2v2H8v-2zm0 3h2v2H8v-2zm3-3h2v2h-2v-2zm0 3h2v2h-2v-2zm3-3h2v2h-2v-2zm0 3h2v2h-2v-2zm3-3h2v2h-2v-2zm0 3h2v2h-2v-2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretAltDownIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret down icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      clip-rule="evenodd"
      d="M12.166 13.852a.25.25 0 01-.332 0L7.99 10.438A.25.25 0 018.158 10h7.684a.25.25 0 01.167.437l-3.843 3.415z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretAltLeftIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret left icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      clip-rule="evenodd"
      d="M9.148 12.166a.25.25 0 010-.332l3.415-3.842a.25.25 0 01.437.166v7.685a.25.25 0 01-.437.166l-3.415-3.843z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretAltRightIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret right icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      clip-rule="evenodd"
      d="M14.852 12.166a.25.25 0 000-.332l-3.415-3.842a.25.25 0 00-.437.166v7.685c0 .23.284.337.437.166l3.415-3.843z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretAltUpIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret up icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      clip-rule="evenodd"
      d="M12.166 10.148a.25.25 0 00-.332 0l-3.842 3.415a.25.25 0 00.166.437h7.684a.25.25 0 00.167-.437l-3.843-3.415z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretDownIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret down icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretLeftIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret left icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretRightIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret right icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
    />
  </svg>
</div>
`;

exports[`Storyshots names CaretUpIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="caret up icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 9l-5 5 1.41 1.41L12 11.83l3.59 3.58L17 14"
    />
  </svg>
</div>
`;

exports[`Storyshots names ChannelAddIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      clip-rule="evenodd"
      d="M21.065 13.345l.06-.192A9.503 9.503 0 0021.5 10.5a9.476 9.476 0 00-3.38-7.263.5.5 0 01-.078-.687l.607-.798a.5.5 0 01.7-.096A11.474 11.474 0 0123.5 10.5c.001.9-.103 1.777-.298 2.619-.031.13-.077.303-.137.517a.5.5 0 01-.481.364H21.54a.5.5 0 01-.475-.655zM12.5 23h-1a.5.5 0 01-.5-.5v-8.645A3.502 3.502 0 0112 7a3.5 3.5 0 011 6.855V22.5a.5.5 0 01-.5.5zM6.015 3.122A9.482 9.482 0 002.5 10.5a9.476 9.476 0 003.38 7.263.5.5 0 01.078.686l-.605.797a.5.5 0 01-.701.096 10.011 10.011 0 01-.326-.277A11.471 11.471 0 01.5 10.5a11.48 11.48 0 014.321-8.985.272.272 0 01.383.043l.863 1.135a.31.31 0 01-.052.429zM8.316 6.42a4.414 4.414 0 00-.189.175A5.483 5.483 0 006.5 10.5a5.484 5.484 0 001.816 4.08.5.5 0 01.068.679l-.608.799a.5.5 0 01-.724.076A7.48 7.48 0 014.5 10.5a7.48 7.48 0 012.55-5.634.5.5 0 01.726.076l.608.8a.5.5 0 01-.068.678zM19.5 10.5a7.481 7.481 0 01-2.55 5.634.5.5 0 01-.726-.075l-.609-.802a.5.5 0 01.068-.678c.1-.088.18-.164.243-.227A5.483 5.483 0 0017.5 10.5a5.481 5.481 0 00-1.539-3.815 4.948 4.948 0 00-.28-.264.5.5 0 01-.066-.677l.608-.801a.5.5 0 01.724-.077A7.48 7.48 0 0119.5 10.5zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm11.5 9H21v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V21h-2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H19v-2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V19h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names ChannelIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="channel icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 13.855V23h-2v-9.145A3.501 3.501 0 0112 7a3.5 3.5 0 011 6.855zM5.041 1.344l1.21 1.592C3.971 4.672 2.5 7.414 2.5 10.5s1.472 5.829 3.751 7.564l-1.21 1.592A11.482 11.482 0 01.5 10.5c0-3.736 1.781-7.056 4.541-9.156zm13.918 0c2.76 2.1 4.541 5.42 4.541 9.156 0 3.736-1.781 7.056-4.541 9.156l-1.21-1.592c2.28-1.736 3.751-4.478 3.751-7.564s-1.472-5.829-3.751-7.564l1.21-1.592zM7.462 4.529l1.21 1.592A5.492 5.492 0 006.5 10.5a5.49 5.49 0 002.172 4.379l-1.21 1.593A7.488 7.488 0 014.5 10.5a7.488 7.488 0 012.962-5.971zm9.076 0c1.8 1.37 2.962 3.534 2.962 5.971s-1.162 4.602-2.962 5.971l-1.21-1.592A5.49 5.49 0 0017.5 10.5a5.49 5.49 0 00-2.172-4.379l1.21-1.593zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
    />
  </svg>
</div>
`;

exports[`Storyshots names ChatIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="chat icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M6 6h12v2H6V6zm0 3h12v2H6V9zm0 3h8v2H6v-2zM4 4v12h4v2l2.667-2H20V4H4zm2 18v-4H4c-1.103 0-2-.897-2-2V4c0-1.103.897-2 2-2h16c1.103 0 2 .897 2 2v12c0 1.103-.897 2-2 2h-8.667L6 22z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CheckCircleFillIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="Checkmark icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm5.354-.354l-.708.708a.5.5 0 000 .707l3 3a.5.5 0 00.708 0l7-7a.5.5 0 000-.707l-.708-.708a.5.5 0 00-.707 0L10 13.586l-1.94-1.94a.5.5 0 00-.706 0z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CheckIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots names ClockIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="clock icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11.513 7h1a.5.5 0 01.5.5v4.078l2.9 2.9a.5.5 0 010 .706l-.707.708a.5.5 0 01-.708 0l-3.485-3.486V7.5a.5.5 0 01.5-.5zM2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CloseCaptionedFillIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="close captioned icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M2 3h20a1 1 0 011 1v16a1 1 0 01-1 1H2a1 1 0 01-1-1V4a1 1 0 011-1zm6.524 13.132c1.485 0 2.365-.528 3.157-1.375l-1.078-1.089c-.605.55-1.144.902-2.024.902-1.32 0-2.233-1.1-2.233-2.42 0-1.342.935-2.42 2.233-2.42.77 0 1.375.33 1.969.869l1.078-1.243c-.715-.704-1.584-1.188-3.036-1.188-2.365 0-4.015 1.793-4.015 3.982 0 2.233 1.683 3.982 3.949 3.982zm7.898 0c1.485 0 2.365-.528 3.157-1.375l-1.078-1.089c-.605.55-1.144.902-2.024.902-1.32 0-2.233-1.1-2.233-2.42 0-1.342.935-2.42 2.233-2.42.77 0 1.375.33 1.969.869l1.078-1.243c-.715-.704-1.584-1.188-3.036-1.188-2.365 0-4.015 1.793-4.015 3.982 0 2.233 1.683 3.982 3.949 3.982z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CloseIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="close icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
    />
  </svg>
</div>
`;

exports[`Storyshots names CodeBrandedIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="code icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 22C6.486 22 2 17.514 2 12S6.486 2 12 2s10 4.486 10 10-4.486 10-10 10zm0-18c-4.411 0-8 3.59-8 8s3.589 8 8 8c4.41 0 8-3.59 8-8s-3.59-8-8-8zm.83 5.207l1.414-1.414L18.451 12l-4.207 4.207-1.414-1.414L15.623 12 12.83 9.207zm-1.659 0L8.378 12l2.793 2.793-1.414 1.414L5.55 12l4.207-4.207 1.414 1.414z"
    />
  </svg>
</div>
`;

exports[`Storyshots names CodeIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="code icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M14.266 4.311l.94.342a.5.5 0 01.299.641l-5.13 14.096a.5.5 0 01-.641.299l-.94-.343a.5.5 0 01-.299-.64l5.13-14.096a.5.5 0 01.641-.299zm1.791 11.044l.798.793a.5.5 0 00.706-.002l3.788-3.802a.5.5 0 000-.707L17.56 7.853a.5.5 0 00-.706 0l-.796.794a.5.5 0 000 .708l2.642 2.639-2.644 2.654a.5.5 0 00.001.707zm-8.706.793l.797-.793a.5.5 0 00.001-.707l-2.644-2.654 2.642-2.64a.5.5 0 000-.707l-.795-.794a.5.5 0 00-.707 0l-3.788 3.784a.5.5 0 00-.001.707l3.788 3.802a.5.5 0 00.707.002z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names CopyIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="Copy icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M18 17V5H8V3.933C8 3.418 8.316 3 8.706 3h10.588c.39 0 .706.418.706.933v12.134c0 .515-.316.933-.706.933H18zM4.75 7h10.5c.414 0 .75.482.75 1.077v11.846c0 .595-.336 1.077-.75 1.077H4.75c-.414 0-.75-.482-.75-1.077V8.077C4 7.482 4.336 7 4.75 7zM6 9v10h8V9H6z"
    />
  </svg>
</div>
`;

exports[`Storyshots names DashboardIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="dashboard icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M16.5 2h5a.5.5 0 01.5.5v9a.5.5 0 01-.5.5h-5a.5.5 0 01-.5-.5v-9a.5.5 0 01.5-.5zm-14 12h6a.5.5 0 01.5.5v7a.5.5 0 01-.5.5h-6a.5.5 0 01-.5-.5v-7a.5.5 0 01.5-.5zm9 0h10a.5.5 0 01.5.5v7a.5.5 0 01-.5.5h-10a.5.5 0 01-.5-.5v-7a.5.5 0 01.5-.5zm-9-12h11a.5.5 0 01.5.5v9a.5.5 0 01-.5.5h-11a.5.5 0 01-.5-.5v-9a.5.5 0 01.5-.5zM4 10h8V4H4v6zm14 0h2V4h-2v6zM4 20h3v-4H4v4zm9 0h7v-4h-7v4z"
    />
  </svg>
</div>
`;

exports[`Storyshots names DownloadIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="download icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 3.5v9.086l1.94-1.94a.5.5 0 01.707 0l.707.707a.5.5 0 010 .708l-4 4a.5.5 0 01-.707 0l-4-4a.5.5 0 010-.708l.706-.706a.5.5 0 01.708 0L11 12.586V3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5z"
    />
    <path
      d="M3.5 15a.5.5 0 00-.5.5V20a1 1 0 001 1h16a1 1 0 001-1v-4.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5V19H5v-3.5a.5.5 0 00-.5-.5z"
    />
  </svg>
</div>
`;

exports[`Storyshots names EnvelopeIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="envelope icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M5.414 6L12 12.586 18.586 6H5.414zM20 7.414l-7.646 7.647a.5.5 0 01-.708 0L4 7.414V18h16V7.414zM3 4h18a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V5a1 1 0 011-1z"
    />
  </svg>
</div>
`;

exports[`Storyshots names FileIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="File icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.174 9L13 4.826V9h4.174zM18 20v-9h-6.5a.5.5 0 01-.5-.5V4H6v16h12zM5 22a1 1 0 01-1-1V3a1 1 0 011-1h7.798a.5.5 0 01.354.146l6.702 6.704a.5.5 0 01.146.353V21a1 1 0 01-1 1H5z"
    />
  </svg>
</div>
`;

exports[`Storyshots names GearIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="gear icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 6.083V4h-2v2.083a5.994 5.994 0 00-3.623 2.092L5.573 7.133l-1 1.732 1.803 1.04A5.985 5.985 0 006 12c0 .736.133 1.441.375 2.092l-1.803 1.041 1 1.732 1.804-1.041A5.993 5.993 0 0011 17.917V20h2v-2.083a5.994 5.994 0 003.625-2.094l1.805 1.042 1-1.732-1.805-1.042A5.987 5.987 0 0018 12c0-.736-.133-1.442-.375-2.093l1.804-1.042-1-1.732-1.806 1.043A5.994 5.994 0 0013 6.083zm-8.924 7.028a8.06 8.06 0 010-2.222L1.842 9.598l3-5.196 2.236 1.291a7.988 7.988 0 011.924-1.112V2h6v2.582c.695.281 1.34.657 1.922 1.112l2.238-1.292 3 5.196-2.237 1.292a8.063 8.063 0 010 2.22l2.237 1.292-3 5.196-2.238-1.292a7.984 7.984 0 01-1.922 1.112V22h-6v-2.581a7.996 7.996 0 01-1.923-1.112L4.84 19.598l-3-5.196 2.236-1.291zM12 16a4 4 0 110-8 4 4 0 010 8zm0-2a2 2 0 100-4 2 2 0 000 4z"
    />
  </svg>
</div>
`;

exports[`Storyshots names HandIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="hand icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M10.008 9.407c.63 1.05.992 2.28.992 3.593a6.973 6.973 0 01-1.753 4.633l-1.362-1.486A4.98 4.98 0 009 13a4.978 4.978 0 00-.999-2.998l-.708-.709L15.79.79l1.42 1.42-7.202 7.197zM21.29 6.29l1.42 1.42-6.503 6.497-1.414-1.414L21.29 6.29zm-1.5-4l1.42 1.42-7.003 6.997-1.414-1.414L19.79 2.29zm1.303 9.803l1.414 1.414-6.997 7.003A8.5 8.5 0 113.49 8.49c2.693-2.693 2.95-3.605 2.04-7.247L7.47.758c1.082 4.328.62 5.959-2.566 9.146a6.5 6.5 0 009.192 9.192l6.996-7.003z"
    />
  </svg>
</div>
`;

exports[`Storyshots names HomeIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="hand icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M21 13.856V22h-7V17a2 2 0 10-4 0v5H3v-8.144L1.723 15.19.277 13.81 12 1.553 23.723 13.81l-1.446 1.382L21 13.856zm-8.077-8.444L12 4.5l-.923.912L5 11.765v8.236h3V17a4 4 0 018 0v3h3v-8.235l-6.077-6.353z"
    />
  </svg>
</div>
`;

exports[`Storyshots names InfoIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="info icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names InteractiveIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="interactive icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M22 10.054h-2.025V5.997H3.996V17.98h8.051V20H3a1 1 0 01-1-1V5a1 1 0 011-1h18a1 1 0 011 1v5.054zm-3.346 5.178l3.199 3.199a.503.503 0 010 .71l-.711.712a.503.503 0 01-.71 0l-3.2-3.2-.937 1.875a.503.503 0 01-.911-.027l-3.343-7.8a.503.503 0 01.66-.66l7.8 3.343a.503.503 0 01.027.911l-1.874.937z"
    />
  </svg>
</div>
`;

exports[`Storyshots names LinkIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="link icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 6h-3v1.9h3a4.1 4.1 0 110 8.2h-3V18h3a6 6 0 000-12zM3.9 12A4.1 4.1 0 018 7.9h3V6H8a6 6 0 000 12h3v-1.9H8c-2.26 0-4.1-1.84-4.1-4.1zM8 13h8v-2H8v2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names ListIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="list icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 2a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1V3a1 1 0 011-1h4zM6 6V4H4v2h2zm1 3a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h4zm-1 4v-2H4v2h2zm1 3a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h4zm-1 4v-2H4v2h2zm4-16h12v2H10V4zm0 7h12v2H10v-2zm0 7h12v2H10v-2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names LockIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="lock icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13.5 15.5a1.5 1.5 0 11-3.001 0 1.5 1.5 0 013.001 0M17 8v2c1.103 0 2 .897 2 2v7c0 1.104-.897 2-2 2H7c-1.103 0-2-.896-2-2v-7c0-1.103.897-2 2-2V8c0-2.756 2.243-5 5-5s5 2.244 5 5zM7 19h10.001L17 12H7v7zM9 8v2h6V8c0-1.653-1.346-3-3-3S9 6.348 9 8z"
    />
  </svg>
</div>
`;

exports[`Storyshots names LogoutIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="logout icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M14 9h-2.001L12 5H4v14h7.997l.001-4H14v4c0 1.103-.897 2-2 2H4c-1.104 0-2-.897-2-2V5a2 2 0 012-2h8c1.103 0 2 .896 2 2v4zm2.293-.293l1.414-1.414L22.414 12l-4.707 4.707-1.414-1.414L18.586 13H10v-2h8.586l-2.293-2.293z"
    />
  </svg>
</div>
`;

exports[`Storyshots names MenuIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="menu icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M22 11v2H2v-2h20zM2 17h19.98v2H2v-2zM2 5h19.977v2H2V5z"
    />
  </svg>
</div>
`;

exports[`Storyshots names MicIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="mic icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm-1.2-9.1c0-.66.54-1.2 1.2-1.2.66 0 1.2.54 1.2 1.2l-.01 6.2c0 .66-.53 1.2-1.19 1.2-.66 0-1.2-.54-1.2-1.2V4.9zm6.5 6.1c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
    />
  </svg>
</div>
`;

exports[`Storyshots names MoreIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="more icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
    />
  </svg>
</div>
`;

exports[`Storyshots names NoteIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="note icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 2a2 2 0 012 2v16c0 1.103-.896 2-2 2H7c-1.104 0-2-.897-2-2v-2H3v-2h2v-3H3v-2h2V8H3V6h2V4a2 2 0 012-2h12zM7 20h12.002L19 4H7v2h1v2H7v3h1v2H7v3h1v2H7v2zm3-13h7v6h-7V7zm2 2v2h3V9h-3z"
    />
  </svg>
</div>
`;

exports[`Storyshots names OrgIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="org icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M21 16.159v-2.184c0-1.654-1.346-3-3-3h-5v-3h6a1 1 0 001-1v-4a1 1 0 00-1-1H5a1 1 0 00-1 1v4a1 1 0 001 1h6v3H6c-1.654 0-3 1.346-3 3v2.184a2.996 2.996 0 00-2 2.816c0 1.654 1.346 3 3 3s3-1.346 3-3a2.996 2.996 0 00-2-2.816v-2.184c0-.551.449-1 1-1h5v3.184a2.996 2.996 0 00-2 2.816c0 1.654 1.346 3 3 3s3-1.346 3-3a2.996 2.996 0 00-2-2.816v-3.184h5c.552 0 1 .449 1 1v2.184a2.996 2.996 0 00-2 2.816c0 1.654 1.346 3 3 3s3-1.346 3-3a2.995 2.995 0 00-2-2.816zM6 3.975h12v2H6v-2zm-2 16a1.001 1.001 0 010-2 1.001 1.001 0 010 2zm8 0a1.001 1.001 0 010-2 1.001 1.001 0 010 2zm8 0a1 1 0 110-2 1 1 0 010 2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names PathIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="path icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M4.411 10l3.586 3.586V22H6l-.003-7.586L3 11.417V14H1V8h6v2H4.411zM21 11.414l-3 3V22h-2v-8.414L19.586 10H17V8h6v6h-2v-2.586zm-8-5.588V22h-2V5.831L9.174 7.657 7.76 6.242 12.003 2l4.242 4.243-1.414 1.414L13 5.826z"
    />
  </svg>
</div>
`;

exports[`Storyshots names PencilIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="pencil icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431c0-.546-.208-1.048-.593-1.433a1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
    />
  </svg>
</div>
`;

exports[`Storyshots names PlaceholderIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="placeholder icon"
    fill="none"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
    />
  </svg>
</div>
`;

exports[`Storyshots names PlayCircleIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="play circle icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8zm-2-4V8l6 4-6 4z"
    />
  </svg>
</div>
`;

exports[`Storyshots names PlayIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="play icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M6 21l14-9L6 3"
    />
  </svg>
</div>
`;

exports[`Storyshots names PlusCircleIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="Plus icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 11h3.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v3.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H7.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V7.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11zm-1-9c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8z"
    />
  </svg>
</div>
`;

exports[`Storyshots names PlusIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="plus icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6"
    />
  </svg>
</div>
`;

exports[`Storyshots names ProjectIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="project icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zM7 12a5 5 0 016.496-4.772.22.22 0 01.09.365l-2.996 2.996 2.828 2.828 2.987-2.986a.224.224 0 01.373.092 5 5 0 01-6.605 6.132l-2.237 2.237a8 8 0 10-2.828-2.828l2.236-2.237A4.987 4.987 0 017 12z"
    />
  </svg>
</div>
`;

exports[`Storyshots names QuestionIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="question icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15h2v2h-2v-2zm-2-4.59c.009-.488 0-1.76.717-2.397.718-.636.627-.53 1.03-.697.4-.167.85-.25 1.346-.25.641 0 1.176.088 1.604.264.43.176.774.394 1.036.656s.449.544.562.846c.112.303.169.585.169.846 0 .434-.057.79-.17 1.07a2.635 2.635 0 01-.974 1.225c-.203.14-.395.28-.575.42-.18.14-.341.3-.48.48-.14.18-.265.227-.265 1.127h-2c0-.9.274-1.258.396-1.52.122-.261.264-.484.426-.67.163-.184.335-.345.515-.48s.347-.27.5-.406c.154-.135.278-.284.373-.447.095-.162.138-.366.129-.61 0-.414-.102-.721-.305-.92-.203-.198-.485-.298-.846-.298a1.31 1.31 0 00-.63.143c-.176.094-.32.22-.433.379a1.643 1.643 0 00-.25.555c-.054.212-.081.44-.081.683H9zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
    />
  </svg>
</div>
`;

exports[`Storyshots names ReportIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="report icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M22 11c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v9h-1v-4c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v4H8v-7c0-.551-.448-1-1-1H3c-.552 0-1 .449-1 1v7H0v2h24v-2h-2v-9zM4 20v-6h2v6H4zm7 0v-3h2v3h-2zm7 0v-8h2v8h-2zM5 9a2 2 0 111.999-2.008l4.002 2.286C11.296 9.106 11.635 9 12 9c.178 0 .347.031.511.074l4.563-4.562A1.997 1.997 0 0117 4a2 2 0 112 2c-.178 0-.348-.029-.512-.073l-4.562 4.562c.043.165.074.333.074.511a2 2 0 01-3.999.01L5.999 8.724A1.976 1.976 0 015 9z"
    />
  </svg>
</div>
`;

exports[`Storyshots names ScopeIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="scope icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12.839 11.456a1 1 0 011.165.543l3.804 8.157a1 1 0 11-1.813.845L13 14.577V21a1 1 0 11-2 0v-6.423l-2.995 6.424a1 1 0 01-1.813-.845l3.803-8.157a1 1 0 011.166-.543.999.999 0 011.678 0zM11 10h8V6h-8v4zm-1-6h10a1 1 0 011 1v6a1 1 0 01-1 1H10a1 1 0 01-1-1V5a1 1 0 011-1zM8 9h1V7H8v2zM7 5h3a1 1 0 011 1v4a1 1 0 01-1 1H7a1 1 0 01-1-1V6a1 1 0 011-1zM5 6h1a1 1 0 011 1v2a1 1 0 01-1 1H5a1 1 0 01-1-1V7a1 1 0 011-1z"
    />
  </svg>
</div>
`;

exports[`Storyshots names SearchIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="search icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M21.707 20.294L16.314 14.9A7.928 7.928 0 0018 10a7.948 7.948 0 00-2.344-5.656A7.942 7.942 0 0010 2a7.94 7.94 0 00-5.656 2.344A7.944 7.944 0 002 10a7.94 7.94 0 002.344 5.656A7.94 7.94 0 0010 18a7.927 7.927 0 004.9-1.685l5.393 5.393 1.414-1.414zM10 16a5.959 5.959 0 01-4.242-1.757A5.958 5.958 0 014 10c0-1.602.624-3.109 1.758-4.242A5.956 5.956 0 0110 4c1.602 0 3.109.624 4.242 1.758A5.957 5.957 0 0116 10c0 1.603-.624 3.11-1.758 4.243A5.96 5.96 0 0110 16z"
    />
  </svg>
</div>
`;

exports[`Storyshots names ShareIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="share icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M17 16.08c-.76 0-1.44.3-1.96.77L7.91 12.7c.05-.23.09-.46.09-.7 0-.24-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81a3 3 0 10-3-3c0 .24.04.47.09.7L7.04 9.81C6.5 9.31 5.79 9 5 9a3 3 0 100 6c.79 0 1.5-.31 2.04-.81l7.12 4.15c-.05.21-.08.43-.08.66 0 1.61 1.31 2.91 2.92 2.91a2.915 2.915 0 100-5.83z"
    />
  </svg>
</div>
`;

exports[`Storyshots names SortAscIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="sort ascending icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.708 0l4.292-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
    />
  </svg>
</div>
`;

exports[`Storyshots names SortDescIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="sort descending icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 8.827l2.236 2.23a.5.5 0 00.707 0l.703-.703a.5.5 0 000-.708l-4.292-4.292a.5.5 0 00-.708 0L7.354 9.646a.5.5 0 000 .708l.703.703a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827z"
    />
  </svg>
</div>
`;

exports[`Storyshots names SortIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
    />
  </svg>
</div>
`;

exports[`Storyshots names StarFillIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="star fill icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.716 13.852L2.253 9.905A.5.5 0 012.546 9H9.33l2.196-6.58a.5.5 0 01.948 0L14.672 9h6.782a.5.5 0 01.293.905l-5.463 3.947 2.225 6.676a.5.5 0 01-.767.564l-5.74-4.146-5.745 4.146a.5.5 0 01-.767-.563l2.226-6.677z"
    />
  </svg>
</div>
`;

exports[`Storyshots names StarIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="star empty icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.716 13.852L2.253 9.905A.5.5 0 012.546 9H9.33l2.196-6.58a.5.5 0 01.948 0L14.672 9h6.782a.5.5 0 01.293.905l-5.463 3.947 2.225 6.676a.5.5 0 01-.767.564l-5.74-4.146-5.745 4.146a.5.5 0 01-.767-.563l2.226-6.677zm2.244-.723l-1.294 3.882 3.336-2.408 3.331 2.405-1.293-3.879 3.086-2.229h-3.822L12 7l-1.302 3.9H6.874l3.086 2.23z"
    />
  </svg>
</div>
`;

exports[`Storyshots names TagIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="tag icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.602 5H5l.004 4.603L14 18.5l4.5-4.5-8.898-9zm11.094 9.822l-5.874 5.874a1.038 1.038 0 01-1.469 0L3.31 10.653a1.038 1.038 0 01-.304-.733L3 4.04C3 3.465 3.465 3 4.038 3h5.88c.275 0 .54.11.734.304l10.044 10.05a1.038 1.038 0 010 1.468zM7.616 9.115a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
    />
  </svg>
</div>
`;

exports[`Storyshots names TestIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="test icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.505 3.645l-1.383 1.382a8.064 8.064 0 00-4.117-1.122A8.097 8.097 0 003.905 12a8.097 8.097 0 008.1 8.095 8.097 8.097 0 007.591-10.921L21.05 7.72A9.958 9.958 0 0122.01 12c0 5.523-4.48 10-10.005 10C6.479 22 2 17.523 2 12S6.48 2 12.005 2a9.96 9.96 0 015.5 1.645zm-2.789 2.788L13.25 7.898a4.287 4.287 0 103.013 4.607l1.8-1.799a6.192 6.192 0 01-6.058 7.484A6.192 6.192 0 015.81 12a6.192 6.192 0 018.905-5.568zm-2.919 5.422l8.855-8.85 1.347 1.346-9.994 9.948-3.056-3.054 1.347-1.347 1.501 1.956z"
    />
  </svg>
</div>
`;

exports[`Storyshots names ThumbDownFillIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M16.02 15.202c-.632.101-1.13.226-1.42.298-1.288.368-2.76 1.424-3 2.8-.187 1.072-.183 2.211-.18 2.941v.243C11.42 22.906 11 23 10 23c-.578 0-1.502-.128-2.3-1.016-.665-.739-1.04-1.484-1.04-2.884 0-.883.052-1.712.2-2.407.073-.341-.18-.693-.53-.693H3.8C2.3 16 1 14.7 1 13.2c0-.53.156-.982.261-1.287L1.3 11.8l-.034-.1C1.16 11.394 1 10.927 1 10.3c0-.627.16-1.094.266-1.4l.034-.1C1.1 8.4 1 8 1 7.3c0-1.2.7-1.9 1-2.2v-.3C2 3.2 3.2 2 4.8 2H9c2.7 0 4.3.6 5.9 1.2l.3.1c.062.062.353.162.873.324A1 1 0 0117 3h4a1 1 0 011 1v11a1 1 0 01-1 1h-4a1 1 0 01-.98-.798zM20 14h-2V5h2v9z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names ThumbDownIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M14.6 15.5c.29-.072.788-.197 1.42-.298A1 1 0 0017 16h4a1 1 0 001-1V4a1 1 0 00-1-1h-4a1 1 0 00-.927.624c-.52-.162-.811-.262-.873-.324l-.3-.1C13.3 2.6 11.5 2 9 2H4.8C3.2 2 2 3.2 2 4.8v.3c-.3.3-1 1-1 2.2 0 .7.1 1.1.3 1.5l-.034.1C1.161 9.206 1 9.673 1 10.3c0 .627.16 1.094.266 1.4l.034.1-.039.113C1.156 12.218 1 12.67 1 13.2 1 14.7 2.3 16 3.8 16h2.035c.349 0 .596.352.524.693-.149.695-.203 1.524-.203 2.407 0 1.4.382 2.145 1.047 2.884a3.11 3.11 0 002.344 1.047c1.422 0 2.375-.125 2.375-1.547v-.243c-.004-.73-.009-1.869.178-2.941.2-.9.529-1.577 1.025-2.05.261-.249.775-.55 1.475-.75zM4.8 4c-.5 0-.8.3-.8.8v.4c0 .71-.298 1.002-.569 1.268C3.206 6.688 3 6.89 3 7.3c0 .495.121.718.23.918.09.164.17.312.17.582 0 .278-.086.45-.179.632A1.692 1.692 0 003 10.3c0 .429.115.656.221.868.093.183.179.354.179.632 0 .33-.121.6-.23.842-.09.198-.17.378-.17.558 0 .4.4.8.8.8H6c.844 0 1.488.44 1.844.938.355.497.508 1.062.453 1.859-.007.104-.02.22-.035.357-.043.401-.106.977-.106 1.946 0 .867.263 1.923 1.563 1.923.148 0 .281-.054.281-.223 0-.9 0-1.9.2-2.8.2-1.1.6-2.2 1.6-3.2.6-.6 1.5-1 2.3-1.3.45-.15 1.239-.3 1.9-.408V5.7l-1.5-.5c-.05 0-.1-.025-.15-.05a.355.355 0 00-.15-.05C12.7 4.5 11.3 4 9 4H4.8zM18 14h2V5h-2v9z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names ThumbUpFillIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.98 8.798A16.146 16.146 0 009.4 8.5c1.288-.368 2.76-1.424 3-2.8.187-1.072.183-2.211.18-2.941V2.59v-.074C12.58 1.094 13 1 14 1c.578 0 1.502.129 2.3 1.016.665.739 1.04 1.484 1.04 2.884 0 .883-.052 1.712-.2 2.407-.073.341.18.693.53.693h2.53c1.5 0 2.8 1.3 2.8 2.8 0 .53-.156.982-.261 1.287l-.039.113.034.1c.105.306.266.773.266 1.4 0 .627-.16 1.094-.266 1.4l-.034.1c.2.4.3.8.3 1.5 0 1.2-.7 1.9-1 2.2v.3c0 1.6-1.2 2.8-2.8 2.8H15c-2.7 0-4.3-.6-5.9-1.2l-.3-.1c-.062-.062-.353-.162-.873-.324A1 1 0 017 21H3a1 1 0 01-1-1V9a1 1 0 011-1h4a1 1 0 01.98.798zM4 10h2v9H4v-9z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names ThumbUpIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.4 8.5c-.29.072-.788.197-1.42.298A1 1 0 007 8H3a1 1 0 00-1 1v11a1 1 0 001 1h4a1 1 0 00.927-.624c.52.162.811.262.873.324l.3.1c1.6.6 3.4 1.2 5.9 1.2h4.2c1.6 0 2.8-1.2 2.8-2.8v-.3c.3-.3 1-1 1-2.2 0-.7-.1-1.1-.3-1.5l.034-.1c.105-.306.266-.773.266-1.4 0-.627-.16-1.094-.266-1.4a11.768 11.768 0 01-.034-.1l.039-.113c.105-.305.261-.757.261-1.287C23 9.3 21.7 8 20.2 8h-2.035c-.349 0-.596-.352-.523-.693.148-.695.202-1.524.202-2.407 0-1.4-.382-2.145-1.047-2.884A3.11 3.11 0 0014.453.969c-1.422 0-2.375.125-2.375 1.547v.243c.004.73.009 1.869-.178 2.941-.2.9-.529 1.577-1.025 2.05-.261.249-.775.55-1.475.75zM19.2 20c.5 0 .8-.3.8-.8v-.4c0-.71.298-1.002.569-1.268.225-.22.431-.423.431-.832 0-.495-.121-.718-.23-.918-.09-.164-.17-.312-.17-.582 0-.278.086-.45.178-.632.107-.212.222-.44.222-.868 0-.429-.115-.656-.221-.868-.093-.183-.179-.354-.179-.632 0-.33.121-.6.23-.842.09-.198.17-.378.17-.558 0-.4-.4-.8-.8-.8H18c-.844 0-1.488-.44-1.844-.938-.355-.497-.508-1.062-.453-1.859.007-.105.02-.22.035-.357.043-.401.106-.977.106-1.946 0-.867-.263-1.923-1.563-1.923-.148 0-.281.054-.281.223 0 .9 0 1.9-.2 2.8-.2 1.1-.6 2.2-1.6 3.2-.6.6-1.5 1-2.3 1.3-.45.15-1.239.3-1.9.408V18.3l1.5.5c.05 0 .1.025.15.05.05.025.1.05.15.05 1.5.6 2.9 1.1 5.2 1.1h4.2zM6 10H4v9h2v-9z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names TrashIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="trash icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9 2h6v2H9V2zM3 7V5h18v2H3zm2 0h14l-.5 15h-13L5 7zm2 0l.5 13h9L17 7H7zm2 2h2v9H9V9zm4 0h2v9h-2V9z"
    />
  </svg>
</div>
`;

exports[`Storyshots names TrendUpIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="trend up icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M5.073 17.767a.25.25 0 010-.354L15.486 7h-6.34a.25.25 0 01-.25-.25v-1.5a.25.25 0 01.25-.25h9.75v9.75a.25.25 0 01-.25.25h-1.5a.25.25 0 01-.25-.25V8.41L6.483 18.823a.25.25 0 01-.353 0l-1.057-1.056z"
    />
  </svg>
</div>
`;

exports[`Storyshots names UploadIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="upload icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 6.414V15.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V6.414l-1.94 1.94a.5.5 0 01-.707 0l-.706-.707a.5.5 0 010-.708l4-4a.5.5 0 01.707 0l4 4a.5.5 0 010 .708l-.707.706a.5.5 0 01-.707 0z"
    />
    <path
      d="M3 15.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V19h14v-3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V20a1 1 0 01-1 1H4a1 1 0 01-1-1z"
    />
  </svg>
</div>
`;

exports[`Storyshots names UserIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="user icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 12c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4zm0-6c-1.103 0-2 .896-2 2 0 1.103.897 2 2 2s2-.897 2-2c0-1.104-.897-2-2-2zm8 14H4v-1c0-3.533 3.29-6 8-6s8 2.467 8 6v1zM6.159 18h11.683c-.598-1.808-2.833-3-5.841-3s-5.244 1.192-5.842 3z"
    />
  </svg>
</div>
`;

exports[`Storyshots names VideoIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      clip-rule="evenodd"
      d="M21.2 8.1L18 10.5V6a1 1 0 00-1-1H3a1 1 0 00-1 1v12a1 1 0 001 1h14a1 1 0 001-1v-4.5l3.2 2.4a.5.5 0 00.8-.4v-7a.5.5 0 00-.8-.4zM4 17V7h12v10H4z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots names WarningIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="warning icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
    />
  </svg>
</div>
`;

exports[`Storyshots names WindowIcon 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="window icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M22 7.975h-2v2h2v2h-2v2h1.999l-.002 6H8v-2H6v2c0 1.104.897 2 2 2h14c1.103 0 2-.896 2-2v-10c0-1.102-.897-2-2-2zm-4 6v-10c0-1.102-.897-2-2-2H2c-1.104 0-2 .898-2 2v10a2 2 0 002 2h14c1.103 0 2-.897 2-2zm-2-8h-6v-2h6v2zm-10 0v-2h2v2H6zm-2-2v2H2v-2h2zm-2 10v-6h13.999l-.002 6H2z"
    />
  </svg>
</div>
`;

exports[`Storyshots names all export names 1`] = `
<div
  data-css-1ydkebv=""
>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="account icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 2c1.103 0 2 .898 2 2v16c0 1.103-.897 2-2 2H4c-1.103 0-2-.897-2-2V4c0-1.102.897-2 2-2h16zm-4 18h4.001L20 4h-4v3h-2V4h-4v8H8V4H4v16h4v-3h2v3h4v-8h2v8zM6 13h6v3H6v-3zm6-5h6v3h-6V8z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="bookmarked icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM19 8h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="bookmark icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="briefcase icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 7h-3V5c0-1.102-.897-2-2-2H9c-1.103 0-2 .898-2 2v2H4c-1.654 0-3 1.346-3 3v4h1v5c0 1.654 1.346 3 3 3h14c1.654 0 3-1.346 3-3v-5h1v-4c0-1.654-1.346-3-3-3zM9 5h6v2H9V5zm11 14a1 1 0 01-1 1H5a1 1 0 01-1-1v-5h4c0 1.103.897 2 2 2h4c1.103 0 2-.897 2-2h4v5zm-10-5v-2h4l-.003 2H10zm11-2h-5c0-1.102-.897-2-2-2h-4c-1.103 0-2 .898-2 2H3v-2c0-.552.449-1 1-1h16c.551 0 1 .448 1 1v2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="browse icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 8h16a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V10a2 2 0 012-2zm0 2v10h16V10H4zm6 2l5 3-5 3v-6zM6 5h12a2 2 0 012 2H4a2 2 0 012-2zm2-3h8a2 2 0 012 2H6a2 2 0 012-2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="calendar icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 7H4v3h16V7h-4v1.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V7h-4v1.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V7zm2-2h4V3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V5h5a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V6a1 1 0 011-1h5V3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V5zm10 7H4v7h16v-7zM5 13h2v2H5v-2zm0 3h2v2H5v-2zm3-3h2v2H8v-2zm0 3h2v2H8v-2zm3-3h2v2h-2v-2zm0 3h2v2h-2v-2zm3-3h2v2h-2v-2zm0 3h2v2h-2v-2zm3-3h2v2h-2v-2zm0 3h2v2h-2v-2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12.166 13.852a.25.25 0 01-.332 0L7.99 10.438A.25.25 0 018.158 10h7.684a.25.25 0 01.167.437l-3.843 3.415z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret left icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M9.148 12.166a.25.25 0 010-.332l3.415-3.842a.25.25 0 01.437.166v7.685a.25.25 0 01-.437.166l-3.415-3.843z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret right icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M14.852 12.166a.25.25 0 000-.332l-3.415-3.842a.25.25 0 00-.437.166v7.685c0 .23.284.337.437.166l3.415-3.843z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret up icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12.166 10.148a.25.25 0 00-.332 0l-3.842 3.415a.25.25 0 00.166.437h7.684a.25.25 0 00.167-.437l-3.843-3.415z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret left icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret right icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="caret up icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9l-5 5 1.41 1.41L12 11.83l3.59 3.58L17 14"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M21.065 13.345l.06-.192A9.503 9.503 0 0021.5 10.5a9.476 9.476 0 00-3.38-7.263.5.5 0 01-.078-.687l.607-.798a.5.5 0 01.7-.096A11.474 11.474 0 0123.5 10.5c.001.9-.103 1.777-.298 2.619-.031.13-.077.303-.137.517a.5.5 0 01-.481.364H21.54a.5.5 0 01-.475-.655zM12.5 23h-1a.5.5 0 01-.5-.5v-8.645A3.502 3.502 0 0112 7a3.5 3.5 0 011 6.855V22.5a.5.5 0 01-.5.5zM6.015 3.122A9.482 9.482 0 002.5 10.5a9.476 9.476 0 003.38 7.263.5.5 0 01.078.686l-.605.797a.5.5 0 01-.701.096 10.011 10.011 0 01-.326-.277A11.471 11.471 0 01.5 10.5a11.48 11.48 0 014.321-8.985.272.272 0 01.383.043l.863 1.135a.31.31 0 01-.052.429zM8.316 6.42a4.414 4.414 0 00-.189.175A5.483 5.483 0 006.5 10.5a5.484 5.484 0 001.816 4.08.5.5 0 01.068.679l-.608.799a.5.5 0 01-.724.076A7.48 7.48 0 014.5 10.5a7.48 7.48 0 012.55-5.634.5.5 0 01.726.076l.608.8a.5.5 0 01-.068.678zM19.5 10.5a7.481 7.481 0 01-2.55 5.634.5.5 0 01-.726-.075l-.609-.802a.5.5 0 01.068-.678c.1-.088.18-.164.243-.227A5.483 5.483 0 0017.5 10.5a5.481 5.481 0 00-1.539-3.815 4.948 4.948 0 00-.28-.264.5.5 0 01-.066-.677l.608-.801a.5.5 0 01.724-.077A7.48 7.48 0 0119.5 10.5zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm11.5 9H21v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V21h-2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H19v-2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V19h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="channel icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 13.855V23h-2v-9.145A3.501 3.501 0 0112 7a3.5 3.5 0 011 6.855zM5.041 1.344l1.21 1.592C3.971 4.672 2.5 7.414 2.5 10.5s1.472 5.829 3.751 7.564l-1.21 1.592A11.482 11.482 0 01.5 10.5c0-3.736 1.781-7.056 4.541-9.156zm13.918 0c2.76 2.1 4.541 5.42 4.541 9.156 0 3.736-1.781 7.056-4.541 9.156l-1.21-1.592c2.28-1.736 3.751-4.478 3.751-7.564s-1.472-5.829-3.751-7.564l1.21-1.592zM7.462 4.529l1.21 1.592A5.492 5.492 0 006.5 10.5a5.49 5.49 0 002.172 4.379l-1.21 1.593A7.488 7.488 0 014.5 10.5a7.488 7.488 0 012.962-5.971zm9.076 0c1.8 1.37 2.962 3.534 2.962 5.971s-1.162 4.602-2.962 5.971l-1.21-1.592A5.49 5.49 0 0017.5 10.5a5.49 5.49 0 00-2.172-4.379l1.21-1.593zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="chat icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 6h12v2H6V6zm0 3h12v2H6V9zm0 3h8v2H6v-2zM4 4v12h4v2l2.667-2H20V4H4zm2 18v-4H4c-1.103 0-2-.897-2-2V4c0-1.103.897-2 2-2h16c1.103 0 2 .897 2 2v12c0 1.103-.897 2-2 2h-8.667L6 22z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="Checkmark icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm5.354-.354l-.708.708a.5.5 0 000 .707l3 3a.5.5 0 00.708 0l7-7a.5.5 0 000-.707l-.708-.708a.5.5 0 00-.707 0L10 13.586l-1.94-1.94a.5.5 0 00-.706 0z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="clock icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.513 7h1a.5.5 0 01.5.5v4.078l2.9 2.9a.5.5 0 010 .706l-.707.708a.5.5 0 01-.708 0l-3.485-3.486V7.5a.5.5 0 01.5-.5zM2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="close captioned icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M2 3h20a1 1 0 011 1v16a1 1 0 01-1 1H2a1 1 0 01-1-1V4a1 1 0 011-1zm6.524 13.132c1.485 0 2.365-.528 3.157-1.375l-1.078-1.089c-.605.55-1.144.902-2.024.902-1.32 0-2.233-1.1-2.233-2.42 0-1.342.935-2.42 2.233-2.42.77 0 1.375.33 1.969.869l1.078-1.243c-.715-.704-1.584-1.188-3.036-1.188-2.365 0-4.015 1.793-4.015 3.982 0 2.233 1.683 3.982 3.949 3.982zm7.898 0c1.485 0 2.365-.528 3.157-1.375l-1.078-1.089c-.605.55-1.144.902-2.024.902-1.32 0-2.233-1.1-2.233-2.42 0-1.342.935-2.42 2.233-2.42.77 0 1.375.33 1.969.869l1.078-1.243c-.715-.704-1.584-1.188-3.036-1.188-2.365 0-4.015 1.793-4.015 3.982 0 2.233 1.683 3.982 3.949 3.982z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="code icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22C6.486 22 2 17.514 2 12S6.486 2 12 2s10 4.486 10 10-4.486 10-10 10zm0-18c-4.411 0-8 3.59-8 8s3.589 8 8 8c4.41 0 8-3.59 8-8s-3.59-8-8-8zm.83 5.207l1.414-1.414L18.451 12l-4.207 4.207-1.414-1.414L15.623 12 12.83 9.207zm-1.659 0L8.378 12l2.793 2.793-1.414 1.414L5.55 12l4.207-4.207 1.414 1.414z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="code icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14.266 4.311l.94.342a.5.5 0 01.299.641l-5.13 14.096a.5.5 0 01-.641.299l-.94-.343a.5.5 0 01-.299-.64l5.13-14.096a.5.5 0 01.641-.299zm1.791 11.044l.798.793a.5.5 0 00.706-.002l3.788-3.802a.5.5 0 000-.707L17.56 7.853a.5.5 0 00-.706 0l-.796.794a.5.5 0 000 .708l2.642 2.639-2.644 2.654a.5.5 0 00.001.707zm-8.706.793l.797-.793a.5.5 0 00.001-.707l-2.644-2.654 2.642-2.64a.5.5 0 000-.707l-.795-.794a.5.5 0 00-.707 0l-3.788 3.784a.5.5 0 00-.001.707l3.788 3.802a.5.5 0 00.707.002z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="Copy icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 17V5H8V3.933C8 3.418 8.316 3 8.706 3h10.588c.39 0 .706.418.706.933v12.134c0 .515-.316.933-.706.933H18zM4.75 7h10.5c.414 0 .75.482.75 1.077v11.846c0 .595-.336 1.077-.75 1.077H4.75c-.414 0-.75-.482-.75-1.077V8.077C4 7.482 4.336 7 4.75 7zM6 9v10h8V9H6z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="dashboard icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.5 2h5a.5.5 0 01.5.5v9a.5.5 0 01-.5.5h-5a.5.5 0 01-.5-.5v-9a.5.5 0 01.5-.5zm-14 12h6a.5.5 0 01.5.5v7a.5.5 0 01-.5.5h-6a.5.5 0 01-.5-.5v-7a.5.5 0 01.5-.5zm9 0h10a.5.5 0 01.5.5v7a.5.5 0 01-.5.5h-10a.5.5 0 01-.5-.5v-7a.5.5 0 01.5-.5zm-9-12h11a.5.5 0 01.5.5v9a.5.5 0 01-.5.5h-11a.5.5 0 01-.5-.5v-9a.5.5 0 01.5-.5zM4 10h8V4H4v6zm14 0h2V4h-2v6zM4 20h3v-4H4v4zm9 0h7v-4h-7v4z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="download icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 3.5v9.086l1.94-1.94a.5.5 0 01.707 0l.707.707a.5.5 0 010 .708l-4 4a.5.5 0 01-.707 0l-4-4a.5.5 0 010-.708l.706-.706a.5.5 0 01.708 0L11 12.586V3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5z"
        />
        <path
          d="M3.5 15a.5.5 0 00-.5.5V20a1 1 0 001 1h16a1 1 0 001-1v-4.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5V19H5v-3.5a.5.5 0 00-.5-.5z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="envelope icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.414 6L12 12.586 18.586 6H5.414zM20 7.414l-7.646 7.647a.5.5 0 01-.708 0L4 7.414V18h16V7.414zM3 4h18a1 1 0 011 1v14a1 1 0 01-1 1H3a1 1 0 01-1-1V5a1 1 0 011-1z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="File icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.174 9L13 4.826V9h4.174zM18 20v-9h-6.5a.5.5 0 01-.5-.5V4H6v16h12zM5 22a1 1 0 01-1-1V3a1 1 0 011-1h7.798a.5.5 0 01.354.146l6.702 6.704a.5.5 0 01.146.353V21a1 1 0 01-1 1H5z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="gear icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 6.083V4h-2v2.083a5.994 5.994 0 00-3.623 2.092L5.573 7.133l-1 1.732 1.803 1.04A5.985 5.985 0 006 12c0 .736.133 1.441.375 2.092l-1.803 1.041 1 1.732 1.804-1.041A5.993 5.993 0 0011 17.917V20h2v-2.083a5.994 5.994 0 003.625-2.094l1.805 1.042 1-1.732-1.805-1.042A5.987 5.987 0 0018 12c0-.736-.133-1.442-.375-2.093l1.804-1.042-1-1.732-1.806 1.043A5.994 5.994 0 0013 6.083zm-8.924 7.028a8.06 8.06 0 010-2.222L1.842 9.598l3-5.196 2.236 1.291a7.988 7.988 0 011.924-1.112V2h6v2.582c.695.281 1.34.657 1.922 1.112l2.238-1.292 3 5.196-2.237 1.292a8.063 8.063 0 010 2.22l2.237 1.292-3 5.196-2.238-1.292a7.984 7.984 0 01-1.922 1.112V22h-6v-2.581a7.996 7.996 0 01-1.923-1.112L4.84 19.598l-3-5.196 2.236-1.291zM12 16a4 4 0 110-8 4 4 0 010 8zm0-2a2 2 0 100-4 2 2 0 000 4z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="hand icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.008 9.407c.63 1.05.992 2.28.992 3.593a6.973 6.973 0 01-1.753 4.633l-1.362-1.486A4.98 4.98 0 009 13a4.978 4.978 0 00-.999-2.998l-.708-.709L15.79.79l1.42 1.42-7.202 7.197zM21.29 6.29l1.42 1.42-6.503 6.497-1.414-1.414L21.29 6.29zm-1.5-4l1.42 1.42-7.003 6.997-1.414-1.414L19.79 2.29zm1.303 9.803l1.414 1.414-6.997 7.003A8.5 8.5 0 113.49 8.49c2.693-2.693 2.95-3.605 2.04-7.247L7.47.758c1.082 4.328.62 5.959-2.566 9.146a6.5 6.5 0 009.192 9.192l6.996-7.003z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="hand icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 13.856V22h-7V17a2 2 0 10-4 0v5H3v-8.144L1.723 15.19.277 13.81 12 1.553 23.723 13.81l-1.446 1.382L21 13.856zm-8.077-8.444L12 4.5l-.923.912L5 11.765v8.236h3V17a4 4 0 018 0v3h3v-8.235l-6.077-6.353z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="interactive icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M22 10.054h-2.025V5.997H3.996V17.98h8.051V20H3a1 1 0 01-1-1V5a1 1 0 011-1h18a1 1 0 011 1v5.054zm-3.346 5.178l3.199 3.199a.503.503 0 010 .71l-.711.712a.503.503 0 01-.71 0l-3.2-3.2-.937 1.875a.503.503 0 01-.911-.027l-3.343-7.8a.503.503 0 01.66-.66l7.8 3.343a.503.503 0 01.027.911l-1.874.937z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="link icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 6h-3v1.9h3a4.1 4.1 0 110 8.2h-3V18h3a6 6 0 000-12zM3.9 12A4.1 4.1 0 018 7.9h3V6H8a6 6 0 000 12h3v-1.9H8c-2.26 0-4.1-1.84-4.1-4.1zM8 13h8v-2H8v2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="list icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 2a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1V3a1 1 0 011-1h4zM6 6V4H4v2h2zm1 3a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h4zm-1 4v-2H4v2h2zm1 3a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h4zm-1 4v-2H4v2h2zm4-16h12v2H10V4zm0 7h12v2H10v-2zm0 7h12v2H10v-2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="lock icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13.5 15.5a1.5 1.5 0 11-3.001 0 1.5 1.5 0 013.001 0M17 8v2c1.103 0 2 .897 2 2v7c0 1.104-.897 2-2 2H7c-1.103 0-2-.896-2-2v-7c0-1.103.897-2 2-2V8c0-2.756 2.243-5 5-5s5 2.244 5 5zM7 19h10.001L17 12H7v7zM9 8v2h6V8c0-1.653-1.346-3-3-3S9 6.348 9 8z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="logout icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 9h-2.001L12 5H4v14h7.997l.001-4H14v4c0 1.103-.897 2-2 2H4c-1.104 0-2-.897-2-2V5a2 2 0 012-2h8c1.103 0 2 .896 2 2v4zm2.293-.293l1.414-1.414L22.414 12l-4.707 4.707-1.414-1.414L18.586 13H10v-2h8.586l-2.293-2.293z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="menu icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M22 11v2H2v-2h20zM2 17h19.98v2H2v-2zM2 5h19.977v2H2V5z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="mic icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm-1.2-9.1c0-.66.54-1.2 1.2-1.2.66 0 1.2.54 1.2 1.2l-.01 6.2c0 .66-.53 1.2-1.19 1.2-.66 0-1.2-.54-1.2-1.2V4.9zm6.5 6.1c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="more icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="note icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 2a2 2 0 012 2v16c0 1.103-.896 2-2 2H7c-1.104 0-2-.897-2-2v-2H3v-2h2v-3H3v-2h2V8H3V6h2V4a2 2 0 012-2h12zM7 20h12.002L19 4H7v2h1v2H7v3h1v2H7v3h1v2H7v2zm3-13h7v6h-7V7zm2 2v2h3V9h-3z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="org icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 16.159v-2.184c0-1.654-1.346-3-3-3h-5v-3h6a1 1 0 001-1v-4a1 1 0 00-1-1H5a1 1 0 00-1 1v4a1 1 0 001 1h6v3H6c-1.654 0-3 1.346-3 3v2.184a2.996 2.996 0 00-2 2.816c0 1.654 1.346 3 3 3s3-1.346 3-3a2.996 2.996 0 00-2-2.816v-2.184c0-.551.449-1 1-1h5v3.184a2.996 2.996 0 00-2 2.816c0 1.654 1.346 3 3 3s3-1.346 3-3a2.996 2.996 0 00-2-2.816v-3.184h5c.552 0 1 .449 1 1v2.184a2.996 2.996 0 00-2 2.816c0 1.654 1.346 3 3 3s3-1.346 3-3a2.995 2.995 0 00-2-2.816zM6 3.975h12v2H6v-2zm-2 16a1.001 1.001 0 010-2 1.001 1.001 0 010 2zm8 0a1.001 1.001 0 010-2 1.001 1.001 0 010 2zm8 0a1 1 0 110-2 1 1 0 010 2z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="path icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.411 10l3.586 3.586V22H6l-.003-7.586L3 11.417V14H1V8h6v2H4.411zM21 11.414l-3 3V22h-2v-8.414L19.586 10H17V8h6v6h-2v-2.586zm-8-5.588V22h-2V5.831L9.174 7.657 7.76 6.242 12.003 2l4.242 4.243-1.414 1.414L13 5.826z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431c0-.546-.208-1.048-.593-1.433a1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="placeholder icon"
        fill="none"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="play circle icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8zm-2-4V8l6 4-6 4z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="play icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 21l14-9L6 3"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="Plus icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 11h3.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v3.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H7.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V7.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11zm-1-9c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2zm0 18c4.41 0 8-3.59 8-8s-3.59-8-8-8-8 3.59-8 8 3.59 8 8 8z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="plus icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="project icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zM7 12a5 5 0 016.496-4.772.22.22 0 01.09.365l-2.996 2.996 2.828 2.828 2.987-2.986a.224.224 0 01.373.092 5 5 0 01-6.605 6.132l-2.237 2.237a8 8 0 10-2.828-2.828l2.236-2.237A4.987 4.987 0 017 12z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="question icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 15h2v2h-2v-2zm-2-4.59c.009-.488 0-1.76.717-2.397.718-.636.627-.53 1.03-.697.4-.167.85-.25 1.346-.25.641 0 1.176.088 1.604.264.43.176.774.394 1.036.656s.449.544.562.846c.112.303.169.585.169.846 0 .434-.057.79-.17 1.07a2.635 2.635 0 01-.974 1.225c-.203.14-.395.28-.575.42-.18.14-.341.3-.48.48-.14.18-.265.227-.265 1.127h-2c0-.9.274-1.258.396-1.52.122-.261.264-.484.426-.67.163-.184.335-.345.515-.48s.347-.27.5-.406c.154-.135.278-.284.373-.447.095-.162.138-.366.129-.61 0-.414-.102-.721-.305-.92-.203-.198-.485-.298-.846-.298a1.31 1.31 0 00-.63.143c-.176.094-.32.22-.433.379a1.643 1.643 0 00-.25.555c-.054.212-.081.44-.081.683H9zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="report icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M22 11c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v9h-1v-4c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v4H8v-7c0-.551-.448-1-1-1H3c-.552 0-1 .449-1 1v7H0v2h24v-2h-2v-9zM4 20v-6h2v6H4zm7 0v-3h2v3h-2zm7 0v-8h2v8h-2zM5 9a2 2 0 111.999-2.008l4.002 2.286C11.296 9.106 11.635 9 12 9c.178 0 .347.031.511.074l4.563-4.562A1.997 1.997 0 0117 4a2 2 0 112 2c-.178 0-.348-.029-.512-.073l-4.562 4.562c.043.165.074.333.074.511a2 2 0 01-3.999.01L5.999 8.724A1.976 1.976 0 015 9z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="scope icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.839 11.456a1 1 0 011.165.543l3.804 8.157a1 1 0 11-1.813.845L13 14.577V21a1 1 0 11-2 0v-6.423l-2.995 6.424a1 1 0 01-1.813-.845l3.803-8.157a1 1 0 011.166-.543.999.999 0 011.678 0zM11 10h8V6h-8v4zm-1-6h10a1 1 0 011 1v6a1 1 0 01-1 1H10a1 1 0 01-1-1V5a1 1 0 011-1zM8 9h1V7H8v2zM7 5h3a1 1 0 011 1v4a1 1 0 01-1 1H7a1 1 0 01-1-1V6a1 1 0 011-1zM5 6h1a1 1 0 011 1v2a1 1 0 01-1 1H5a1 1 0 01-1-1V7a1 1 0 011-1z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="search icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M21.707 20.294L16.314 14.9A7.928 7.928 0 0018 10a7.948 7.948 0 00-2.344-5.656A7.942 7.942 0 0010 2a7.94 7.94 0 00-5.656 2.344A7.944 7.944 0 002 10a7.94 7.94 0 002.344 5.656A7.94 7.94 0 0010 18a7.927 7.927 0 004.9-1.685l5.393 5.393 1.414-1.414zM10 16a5.959 5.959 0 01-4.242-1.757A5.958 5.958 0 014 10c0-1.602.624-3.109 1.758-4.242A5.956 5.956 0 0110 4c1.602 0 3.109.624 4.242 1.758A5.957 5.957 0 0116 10c0 1.603-.624 3.11-1.758 4.243A5.96 5.96 0 0110 16z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="share icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 16.08c-.76 0-1.44.3-1.96.77L7.91 12.7c.05-.23.09-.46.09-.7 0-.24-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81a3 3 0 10-3-3c0 .24.04.47.09.7L7.04 9.81C6.5 9.31 5.79 9 5 9a3 3 0 100 6c.79 0 1.5-.31 2.04-.81l7.12 4.15c-.05.21-.08.43-.08.66 0 1.61 1.31 2.91 2.92 2.91a2.915 2.915 0 100-5.83z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="sort ascending icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.708 0l4.292-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="sort descending icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 8.827l2.236 2.23a.5.5 0 00.707 0l.703-.703a.5.5 0 000-.708l-4.292-4.292a.5.5 0 00-.708 0L7.354 9.646a.5.5 0 000 .708l.703.703a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="star fill icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.716 13.852L2.253 9.905A.5.5 0 012.546 9H9.33l2.196-6.58a.5.5 0 01.948 0L14.672 9h6.782a.5.5 0 01.293.905l-5.463 3.947 2.225 6.676a.5.5 0 01-.767.564l-5.74-4.146-5.745 4.146a.5.5 0 01-.767-.563l2.226-6.677z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="star empty icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.716 13.852L2.253 9.905A.5.5 0 012.546 9H9.33l2.196-6.58a.5.5 0 01.948 0L14.672 9h6.782a.5.5 0 01.293.905l-5.463 3.947 2.225 6.676a.5.5 0 01-.767.564l-5.74-4.146-5.745 4.146a.5.5 0 01-.767-.563l2.226-6.677zm2.244-.723l-1.294 3.882 3.336-2.408 3.331 2.405-1.293-3.879 3.086-2.229h-3.822L12 7l-1.302 3.9H6.874l3.086 2.23z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="tag icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.602 5H5l.004 4.603L14 18.5l4.5-4.5-8.898-9zm11.094 9.822l-5.874 5.874a1.038 1.038 0 01-1.469 0L3.31 10.653a1.038 1.038 0 01-.304-.733L3 4.04C3 3.465 3.465 3 4.038 3h5.88c.275 0 .54.11.734.304l10.044 10.05a1.038 1.038 0 010 1.468zM7.616 9.115a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="test icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.505 3.645l-1.383 1.382a8.064 8.064 0 00-4.117-1.122A8.097 8.097 0 003.905 12a8.097 8.097 0 008.1 8.095 8.097 8.097 0 007.591-10.921L21.05 7.72A9.958 9.958 0 0122.01 12c0 5.523-4.48 10-10.005 10C6.479 22 2 17.523 2 12S6.48 2 12.005 2a9.96 9.96 0 015.5 1.645zm-2.789 2.788L13.25 7.898a4.287 4.287 0 103.013 4.607l1.8-1.799a6.192 6.192 0 01-6.058 7.484A6.192 6.192 0 015.81 12a6.192 6.192 0 018.905-5.568zm-2.919 5.422l8.855-8.85 1.347 1.346-9.994 9.948-3.056-3.054 1.347-1.347 1.501 1.956z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.02 15.202c-.632.101-1.13.226-1.42.298-1.288.368-2.76 1.424-3 2.8-.187 1.072-.183 2.211-.18 2.941v.243C11.42 22.906 11 23 10 23c-.578 0-1.502-.128-2.3-1.016-.665-.739-1.04-1.484-1.04-2.884 0-.883.052-1.712.2-2.407.073-.341-.18-.693-.53-.693H3.8C2.3 16 1 14.7 1 13.2c0-.53.156-.982.261-1.287L1.3 11.8l-.034-.1C1.16 11.394 1 10.927 1 10.3c0-.627.16-1.094.266-1.4l.034-.1C1.1 8.4 1 8 1 7.3c0-1.2.7-1.9 1-2.2v-.3C2 3.2 3.2 2 4.8 2H9c2.7 0 4.3.6 5.9 1.2l.3.1c.062.062.353.162.873.324A1 1 0 0117 3h4a1 1 0 011 1v11a1 1 0 01-1 1h-4a1 1 0 01-.98-.798zM20 14h-2V5h2v9z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M14.6 15.5c.29-.072.788-.197 1.42-.298A1 1 0 0017 16h4a1 1 0 001-1V4a1 1 0 00-1-1h-4a1 1 0 00-.927.624c-.52-.162-.811-.262-.873-.324l-.3-.1C13.3 2.6 11.5 2 9 2H4.8C3.2 2 2 3.2 2 4.8v.3c-.3.3-1 1-1 2.2 0 .7.1 1.1.3 1.5l-.034.1C1.161 9.206 1 9.673 1 10.3c0 .627.16 1.094.266 1.4l.034.1-.039.113C1.156 12.218 1 12.67 1 13.2 1 14.7 2.3 16 3.8 16h2.035c.349 0 .596.352.524.693-.149.695-.203 1.524-.203 2.407 0 1.4.382 2.145 1.047 2.884a3.11 3.11 0 002.344 1.047c1.422 0 2.375-.125 2.375-1.547v-.243c-.004-.73-.009-1.869.178-2.941.2-.9.529-1.577 1.025-2.05.261-.249.775-.55 1.475-.75zM4.8 4c-.5 0-.8.3-.8.8v.4c0 .71-.298 1.002-.569 1.268C3.206 6.688 3 6.89 3 7.3c0 .495.121.718.23.918.09.164.17.312.17.582 0 .278-.086.45-.179.632A1.692 1.692 0 003 10.3c0 .429.115.656.221.868.093.183.179.354.179.632 0 .33-.121.6-.23.842-.09.198-.17.378-.17.558 0 .4.4.8.8.8H6c.844 0 1.488.44 1.844.938.355.497.508 1.062.453 1.859-.007.104-.02.22-.035.357-.043.401-.106.977-.106 1.946 0 .867.263 1.923 1.563 1.923.148 0 .281-.054.281-.223 0-.9 0-1.9.2-2.8.2-1.1.6-2.2 1.6-3.2.6-.6 1.5-1 2.3-1.3.45-.15 1.239-.3 1.9-.408V5.7l-1.5-.5c-.05 0-.1-.025-.15-.05a.355.355 0 00-.15-.05C12.7 4.5 11.3 4 9 4H4.8zM18 14h2V5h-2v9z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.98 8.798A16.146 16.146 0 009.4 8.5c1.288-.368 2.76-1.424 3-2.8.187-1.072.183-2.211.18-2.941V2.59v-.074C12.58 1.094 13 1 14 1c.578 0 1.502.129 2.3 1.016.665.739 1.04 1.484 1.04 2.884 0 .883-.052 1.712-.2 2.407-.073.341.18.693.53.693h2.53c1.5 0 2.8 1.3 2.8 2.8 0 .53-.156.982-.261 1.287l-.039.113.034.1c.105.306.266.773.266 1.4 0 .627-.16 1.094-.266 1.4l-.034.1c.2.4.3.8.3 1.5 0 1.2-.7 1.9-1 2.2v.3c0 1.6-1.2 2.8-2.8 2.8H15c-2.7 0-4.3-.6-5.9-1.2l-.3-.1c-.062-.062-.353-.162-.873-.324A1 1 0 017 21H3a1 1 0 01-1-1V9a1 1 0 011-1h4a1 1 0 01.98.798zM4 10h2v9H4v-9z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.4 8.5c-.29.072-.788.197-1.42.298A1 1 0 007 8H3a1 1 0 00-1 1v11a1 1 0 001 1h4a1 1 0 00.927-.624c.52.162.811.262.873.324l.3.1c1.6.6 3.4 1.2 5.9 1.2h4.2c1.6 0 2.8-1.2 2.8-2.8v-.3c.3-.3 1-1 1-2.2 0-.7-.1-1.1-.3-1.5l.034-.1c.105-.306.266-.773.266-1.4 0-.627-.16-1.094-.266-1.4a11.768 11.768 0 01-.034-.1l.039-.113c.105-.305.261-.757.261-1.287C23 9.3 21.7 8 20.2 8h-2.035c-.349 0-.596-.352-.523-.693.148-.695.202-1.524.202-2.407 0-1.4-.382-2.145-1.047-2.884A3.11 3.11 0 0014.453.969c-1.422 0-2.375.125-2.375 1.547v.243c.004.73.009 1.869-.178 2.941-.2.9-.529 1.577-1.025 2.05-.261.249-.775.55-1.475.75zM19.2 20c.5 0 .8-.3.8-.8v-.4c0-.71.298-1.002.569-1.268.225-.22.431-.423.431-.832 0-.495-.121-.718-.23-.918-.09-.164-.17-.312-.17-.582 0-.278.086-.45.178-.632.107-.212.222-.44.222-.868 0-.429-.115-.656-.221-.868-.093-.183-.179-.354-.179-.632 0-.33.121-.6.23-.842.09-.198.17-.378.17-.558 0-.4-.4-.8-.8-.8H18c-.844 0-1.488-.44-1.844-.938-.355-.497-.508-1.062-.453-1.859.007-.105.02-.22.035-.357.043-.401.106-.977.106-1.946 0-.867-.263-1.923-1.563-1.923-.148 0-.281.054-.281.223 0 .9 0 1.9-.2 2.8-.2 1.1-.6 2.2-1.6 3.2-.6.6-1.5 1-2.3 1.3-.45.15-1.239.3-1.9.408V18.3l1.5.5c.05 0 .1.025.15.05.05.025.1.05.15.05 1.5.6 2.9 1.1 5.2 1.1h4.2zM6 10H4v9h2v-9z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="trash icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 2h6v2H9V2zM3 7V5h18v2H3zm2 0h14l-.5 15h-13L5 7zm2 0l.5 13h9L17 7H7zm2 2h2v9H9V9zm4 0h2v9h-2V9z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="trend up icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.073 17.767a.25.25 0 010-.354L15.486 7h-6.34a.25.25 0 01-.25-.25v-1.5a.25.25 0 01.25-.25h9.75v9.75a.25.25 0 01-.25.25h-1.5a.25.25 0 01-.25-.25V8.41L6.483 18.823a.25.25 0 01-.353 0l-1.057-1.056z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="upload icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 6.414V15.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V6.414l-1.94 1.94a.5.5 0 01-.707 0l-.706-.707a.5.5 0 010-.708l4-4a.5.5 0 01.707 0l4 4a.5.5 0 010 .708l-.707.706a.5.5 0 01-.707 0z"
        />
        <path
          d="M3 15.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V19h14v-3.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V20a1 1 0 01-1 1H4a1 1 0 01-1-1z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="user icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4zm0-6c-1.103 0-2 .896-2 2 0 1.103.897 2 2 2s2-.897 2-2c0-1.104-.897-2-2-2zm8 14H4v-1c0-3.533 3.29-6 8-6s8 2.467 8 6v1zM6.159 18h11.683c-.598-1.808-2.833-3-5.841-3s-5.244 1.192-5.842 3z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M21.2 8.1L18 10.5V6a1 1 0 00-1-1H3a1 1 0 00-1 1v12a1 1 0 001 1h14a1 1 0 001-1v-4.5l3.2 2.4a.5.5 0 00.8-.4v-7a.5.5 0 00-.8-.4zM4 17V7h12v10H4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="warning icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
        />
      </svg>
    </div>
  </div>
  <div
    data-css-1abx40i=""
  >
    <div
      data-css-10dvu6c=""
    >
      <svg
        aria-label="window icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M22 7.975h-2v2h2v2h-2v2h1.999l-.002 6H8v-2H6v2c0 1.104.897 2 2 2h14c1.103 0 2-.896 2-2v-10c0-1.102-.897-2-2-2zm-4 6v-10c0-1.102-.897-2-2-2H2c-1.104 0-2 .898-2 2v10a2 2 0 002 2h14c1.103 0 2-.897 2-2zm-2-8h-6v-2h6v2zm-10 0v-2h2v2H6zm-2-2v2H2v-2h2zm-2 10v-6h13.999l-.002 6H2z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  data-css-6f8y6t=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  data-css-10dvu6c=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-4oczle=""
>
  <svg
    aria-label="check icon"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
    />
  </svg>
</div>
`;
